# md-viewer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  test-anchors.md  test.md
.github/: RELEASING.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
Casks/: md-viewer.rb
Formula/: md-viewer.rb
docs/plans/: 2026-02-01-homebrew-auto-update-design.md  2026-02-12-fix-blank-screen-implementation.md  2026-02-12-fix-blank-screen-race-condition-design.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  markdown.rs
