[package]
name = "md-viewer"
version = "0.1.2"
edition = "2021"
description = "A minimal, fast CLI tool to view and edit markdown files"
license = "MIT"
repository = "https://github.com/aberghammer-analytics/md-viewer"
homepage = "https://github.com/aberghammer-analytics/md-viewer"
readme = "../README.md"
keywords = ["markdown", "viewer", "editor", "cli", "tauri"]
categories = ["command-line-utilities", "text-editors"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = { version = "0.50", default-features = false }
ammonia = "4.1"
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
